--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "init": "lerna run build --stream --scope=@cz-design/scripts && lerna link && lerna run init --scope=@cz-design/main && pnpm run icon:generate",
-    "icon:generate": "yarn workspace @cz-design/icon run build",
-    "start": "yarn workspace @cz-design/main run start",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
-    "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\""
+    "init": "pnpm run build:script && pnpm run icon:gen",
+    "icon:gen": "pnpm --filter \"@cz-design/web\" run icon:gen",
+    "build:script": "pnpm --filter \"@cz-design/scripts\" run build",
+    "init:start": "pnpm run init && pnpm run start",
+    "start": "pnpm --filter @cz-design/web run start",
+    "build": "pnpm --filter @cz-design/web run build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@cz-design/icon": "^0.0.1",
-    "@cz-design/main": "^1.0.0",
+    "@cz-design/web": "^1.0.0",
     "@cz-design/scripts": "^1.0.0",
     "@types/node": "^20.4.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
@@ -29,11 +28,9 @@
     "eslint-plugin-vue": "^9.15.1",
     "lerna": "^6.1.0",
     "prettier": "^3.0.0",
-    "turbo": "^1.10.8",
     "typescript": "^5.1.6",
     "vite": "^4.4.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue-tsc": "^1.8.3",
-    "yarn": "^1.22.19"
+    "vue-tsc": "^1.8.3"
   }
 }
