feat: record commit

--- a/packages/cz-scripts/package.json
+++ b/packages/cz-scripts/package.json
@@ -24,12 +24,19 @@
     "@pnpm/find-workspace-dir": "^6.0.2",
     "@pnpm/find-workspace-packages": "^6.0.9",
     "@types/fs-extra": "^11.0.1",
+    "@types/gulp": "^4.0.13",
+    "@types/gulp-autoprefixer": "^0.0.34",
+    "@types/gulp-sass": "^5.0.1",
     "@types/node": "^20.4.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "camelcase": "^7.0.1",
     "consola": "^3.2.3",
     "esbuild": "^0.18.15",
     "fast-glob": "^3.3.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-sass": "^5.1.0",
     "tsx": "^3.12.7",
     "unplugin-vue": "^4.2.5",
     "vite": "^4.4.4",
