--- a/packages/cz-scripts/tsconfig.json
+++ b/packages/cz-scripts/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "jsx": "preserve",
     "lib": ["DOM", "ES2020"]
   },
   "include": ["src"]
