--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@cz-design/web": "^1.0.0",
     "@cz-design/scripts": "^1.0.0",
+    "@cz-design/web": "^1.0.0",
     "@types/node": "^20.4.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "autoprefixer": "^10.4.14",
     "chalk": "^4.1.2",
     "eslint": "^8.45.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-vue": "^9.15.1",
     "lerna": "^6.1.0",
     "prettier": "^3.0.0",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vite": "^4.4.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
