--- a/packages/cz-component/package.json
+++ b/packages/cz-component/package.json
@@ -2,5 +2,11 @@
   "name": "@cz-design/component",
   "version": "1.0.0",
   "description": "组件库",
-  "main": "index.ts"
+  "main": "index.ts",
+  "dependencies": {
+    "@cz-design/utils": "workspace:^"
+  },
+  "devDependencies": {
+    "@vue/babel-plugin-jsx": "^1.1.5"
+  }
 }
