--- a/packages/cz-web/tsconfig.json
+++ b/packages/cz-web/tsconfig.json
@@ -15,6 +15,7 @@
     "skipLibCheck": true,
     // 允许导入json
     "resolveJsonModule": true,
+    "jsx": "preserve",
     // 删除注释
     "removeComments": true,
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
