--- a/package.json
+++ b/package.json
@@ -34,5 +34,14 @@
     "vite": "^4.4.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.8.3"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "vite",
+        "react",
+        "react-dom"
+      ]
+    }
   }
 }
